<?xml version="1.0"?>
<package>
	<name>pose_to_tf_publisher</name>
	<version>0.1.0</version>
	<description>Package that publishes tf from poses (geometry_msgs::PoseStamped, geometry_msgs::PoseWithCovarianceStamped, nav_msgs::Odometry)</description>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>Boost</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>rosconsole</build_depend>
	<build_depend>angles</build_depend>	
	<build_depend>laserscan_to_pointcloud</build_depend>
	<run_depend>eigen</run_depend>
	<run_depend>cmake_modules</run_depend>
	<run_depend>Boost</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>tf2</run_depend>
	<run_depend>tf2_ros</run_depend>
	<run_depend>rosconsole</run_depend>
	<run_depend>angles</run_depend>
	<run_depend>laserscan_to_pointcloud</run_depend>
</package>
