<?xml version="1.0"?>
<package format="2">
	<name>pose_to_tf_publisher</name>
	<version>0.1.0</version>
	<description>Package that publishes tf from poses (geometry_msgs::PoseStamped, geometry_msgs::PoseWithCovarianceStamped, nav_msgs::Odometry)</description>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>angles</depend>
	<depend>geometry_msgs</depend>
	<depend>laserscan_to_pointcloud</depend> 	<!-- https://github.com/carlosmccosta/laserscan_to_pointcloud -->
	<depend>nav_msgs</depend>
	<depend>rosconsole</depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>libboost-all-dev</depend>
	<depend>libeigen3-dev</depend>
</package>
